--- a/scss/layout/_addSection.scss
+++ b/scss/layout/_addSection.scss
@@ -7,6 +7,9 @@
     margin-right: auto;
     left: 50%;
     -webkit-transform: translateX(-50%);
+    -moz-transform:translateX(-50%);
+    -ms-transform:translateX(-50%);
+    -o-transform:translateX(-50%);
     transform: translateX(-50%);
     right: 0;
     bottom: 45px;
