--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -26,9 +26,9 @@ body{
   @include flexbox;
   flex-direction: column;
   justify-content: center;
-  -webkit-box-shadow: 0px 0px 5px 1px rgba(214,214,214,0.34);
-  -moz-box-shadow: 0px 0px 5px 1px rgba(214,214,214,0.34);
-  box-shadow: 0px 0px 5px 1px rgba(214,214,214,0.34);
+  -webkit-box-shadow: 0 0 5px 1px rgba(214,214,214,0.34);
+  -moz-box-shadow: 0 0 5px 1px rgba(214,214,214,0.34);
+  box-shadow: 0 0 5px 1px rgba(214,214,214,0.34);
   .container{
     width: nth($width-percentage,1);
     height: nth($height-viewport,1);
